# codegen-thing-attempt-2

./: feldspar.cabal  stack.yaml
feldsparc/: Main.hs
src/Data/Function/: Converge.hs
src/Feldspar/: AST.hs  Arithmetic.hs  ConstantFold.hs  ECMAScript.hs  EtaReduce.hs  FloatOut.hs  Inline.hs  Intrinsic.hs  Intrinsics.hs  Reduce.hs
src/Language/ECMAScript/: AST.hs  Pretty.hs
test/Feldspar/: ASTSpec.hs  ArithmeticSpec.hs  ConstantFoldSpec.hs  EtaReduceSpec.hs  FloatOutSpec.hs  InlineSpec.hs  ReduceSpec.hs
