name: feldspar
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  exposed-modules:
    Feldspar.AST,
    Feldspar.ConstantFold,
    Feldspar.Inline,
    Feldspar.Intrinsic
  build-depends:
    base >= 4.9 && < 5,
    text >= 1.2 && < 2,
    zabt >= 0.4 && < 1

  ghc-options: -Wall

  default-language: Haskell2010
  default-extensions:
    DeriveFoldable,
    DeriveFunctor,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternSynonyms,
    StandaloneDeriving

test-suite test
  type: exitcode-stdio-1.0

  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Feldspar.ASTSpec,
    Feldspar.ConstantFoldSpec,
    Feldspar.InlineSpec
  build-depends:
    base >= 4.9 && < 5,
    feldspar,
    hspec >= 2.4 && < 3,
    zabt >= 0.4 && < 1

  ghc-options: -Wall

  default-language: Haskell2010
  default-extensions:
    DeriveFoldable,
    DeriveFunctor,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternSynonyms,
    StandaloneDeriving
